k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # опционально, если нужен path rewrite
spec:
  ingressClassName: nginx  # убедись, что у тебя ingressClass nginx
  rules:
    - host: k8s.stasik.od.ua
      http:
        paths:
          - path: /json
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 33500
